test runner uses test.html

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "serve": "http-server -p 9000",
     "lint": "eslint starparam.js",
-    "test": "npm run lint && node-qunit-phantomjs index.html",
+    "test": "npm run lint && node-qunit-phantomjs test.html",
     "package": "bin/package.sh"
   },
   "repository": {
