--- a/package.json
+++ b/package.json
@@ -1,29 +1,28 @@
 {
   "name": "starparam",
-  "version": "1.0.1",
+  "version": "2.0.1",
   "description": "URL parameter utility",
   "scripts": {
-    "serve": "http-server -p 9000",
     "lint": "eslint starparam.js",
-    "test": "npm run lint && node-qunit-phantomjs test.html",
-    "package": "bin/package.sh"
+    "test": "npm run lint && babel-tape-runner test.js | faucet"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/jonbri/starparam"
   },
   "devDependencies": {
-    "eslint": "^2.9.0",
-    "http-server": "^0.9.0",
-    "jquery": "^2.2.3",
-    "node-qunit-phantomjs": "^1.4.0",
-    "qunitjs": "^2.0.0-rc1",
-    "uglify-js": "^2.6.2"
+    "babel-preset-es2015": "^6.24.1",
+    "babel-tape-runner": "^2.0.1",
+    "eslint": "^3.19.0",
+    "faucet": "0.0.1",
+    "tape": "^4.7.0"
   },
   "author": "Jonathan Brink",
   "license": "BSD-2-Clause",
   "keywords": [
     "url",
-    "parameter"
+    "parameter",
+    "utility",
+    "parse"
   ]
 }
